--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
       ></button>
     </div>
     
-    <script src="./js/app.js" type="module"></script>
-    <script src="./js/task.js" type="module"></script>
+    <script src="../src/js/app.js" type="module"></script>
+    <script src="../src/js/task.js" type="module"></script>
        
   </body>
 </html>
